tests/neg-custom-args/captures/local-mutables-2.check
-- Error: tests/neg-custom-args/captures/local-mutables-2.scala:7:9 ----------------------------------------------------
7 |def foo() = // error: separation failure
  |         ^
  |Separation failure in method foo's inferred result type (() ->{any.rd} Int, Int => Unit)^{}.
  |One part,  () ->{any.rd} Int, hides capabilities  {any².rd}.
  |Another part,  Int => Unit,  captures capabilities  {any³, any, any²}.
  |The two sets overlap at  {`any` of value r}.
  |
  |where:    => and any³ refer to a root capability classified as Unscoped in the result type of method foo
  |          any         is a root capability classified as Unscoped in the type of value r
  |          any²        is a root capability classified as Unscoped created in value r when constructing instance Ref
-- Error: tests/neg-custom-args/captures/local-mutables-2.scala:11:10 --------------------------------------------------
11 |def foo2() = // error: separation failure
   |          ^
   |          Separation failure in method foo2's inferred result type (() ->{any.rd} Int, Int => Unit)^{}.
   |          One part,  Int => Unit, hides capabilities  {any}.
   |          Another part,  () ->{any.rd} Int,  captures capabilities  {any.rd}.
   |          The two sets overlap at  {`any` of variable r}.
   |
   |          where:    =>  refers to a root capability classified as Unscoped in the result type of method foo2
   |                    any is a root capability classified as Unscoped in the type of variable r
